// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SongTitle renders when title and artist are empty 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col mb-3 mt-6"
  >
    <p
      class="font-bold text-2xl dark:text-white"
    />
    <p
      class="text-base text-natural-stone dark:text-zinc-200"
    />
  </div>
</DocumentFragment>
`;

exports[`SongTitle renders with title and artist 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col mb-3 mt-6"
  >
    <p
      class="font-bold text-2xl dark:text-white"
    >
      Painted in Blue
    </p>
    <p
      class="text-base text-natural-stone dark:text-zinc-200"
    >
      Soul Canvas
    </p>
  </div>
</DocumentFragment>
`;
